# botnet-ng

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  botnet-ng.cabal  botnet2.cabal  stack.yaml
doc/: help.md
etc/: ex-config.yaml  mandb
etc/markov/: nlab
etc/quotes/: arch  catv  linus  rms  rmsfact  theo
src/: Main.hs  Orphans.hs
src/Components/: Admin.hs  Citation.hs  Crates.hs  Github.hs  Interject.hs  Manual.hs  Market.hs  Markov.hs  Misc.hs  Permission.hs  Search.hs  Stock.hs  UserData.hs  Wolfram.hs
src/Control/Monad/: Acid.hs
src/Data/: Config.hs  Helpful.hs  Permission.hs
