name:                botnet-ng
version:             0.1.0.0
synopsis:            An IRC bot
-- description:
homepage:            https://github.com/tsahyt/botnet-ng#readme
license:             MIT
license-file:        LICENSE
author:              Paul Ogris
maintainer:          paul@tsahyt.com
copyright:           2018 Paul Ogris
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable botnet-ng
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, 
                       yak, 
                       voco, 
                       acid-state >= 0.14.3
