name:                botnet-ng
version:             0.1.0.0
synopsis:            An IRC bot
-- description:
homepage:            https://github.com/tsahyt/botnet-ng#readme
license:             MIT
license-file:        LICENSE
author:              Paul Ogris
maintainer:          paul@tsahyt.com
copyright:           2018 Paul Ogris
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable botnet-ng
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  other-modules:       Control.Monad.Acid
                       Data.Permission
  build-depends:       base >= 4.7 && < 5, 
                       yak, 
                       voco, 
                       transformers >= 0.4 && < 0.6,
                       mtl >= 2.2 && < 3,
                       acid-state >= 0.14.3 && < 0.15,
                       safecopy >= 0.9.4,
                       containers >= 0.5.10 && < 0.6,
                       lens >= 4.16 && < 5,
                       attoparsec >= 0.13,
                       text >= 1.1.1.3
