name:                botnet-ng
version:             0.1.0.0
synopsis:            An IRC bot
-- description:
homepage:            https://github.com/tsahyt/botnet-ng#readme
license:             MIT
license-file:        LICENSE
author:              Paul Ogris
maintainer:          paul@tsahyt.com
copyright:           2018 Paul Ogris
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable botnet-ng
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  other-modules:       Control.Monad.Acid
                       Components.Admin
                       Components.Citation
                       Components.Interject
                       Components.Misc
                       Components.Permission
                       Components.Search
                       Components.Stock
                       Data.Config
                       Orphans
  build-depends:       base >= 4.7 && < 5, 
                       yak, 
                       voco, 
                       bytestring >= 0.10.8 && < 0.11,
                       transformers >= 0.4 && < 0.6,
                       mtl >= 2.2 && < 3,
                       acid-state >= 0.14.3 && < 0.15,
                       safecopy >= 0.9.4,
                       containers >= 0.5.10 && < 0.6,
                       lens >= 4.16 && < 5,
                       attoparsec >= 0.13,
                       text >= 1.1.1.3,
                       yaml >= 0.8.30,
                       aeson >= 1.2 && < 1.4,
                       lens-aeson >= 1.0.2 && < 1.1,
                       optparse-generic >= 1.2,
                       filepath >= 1.4 && < 1.5,
                       directory >= 1.3 && < 1.4,
                       array >= 0.5 && < 0.6,
                       vector >= 0.12 && < 0.13,
                       MonadRandom >= 0.5 && < 0.6,
                       parser-combinators >= 0.4,
                       wreq >= 0.5.2 && < 0.6,
                       time >= 1.8 && < 2
